# restfx

./: .gitignore  LICENSE  MANIFEST.in  README.md  build.bat  less.py  pack.py  requirements-build.txt  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  upload.bat
.gitee/: ISSUE_TEMPLATE.zh-CN.md
demo/: .gitignore  fix_path.py  main.py  midlewares.py
demo/app_test/entry/: __init__.py  demo.py
demo/app_test/tools/: enums.py
demo/static/: index.html
demo/static/assets/: myscript.js
demo/test/api/: __init__.py  demo.py
requirements/: build.txt  dev.txt  development.txt  production.txt
src/: .gitignore
src/autorest/: __init__.py  app.py
src/autorest/base/: app_base.py  app_context.py  request.py  response.py  session.py  wsgi_app.py
src/autorest/http/: __init__.py
src/autorest/middleware/: interface.py
src/autorest/routes/: __init__.py  argument_specification.py  decorator.py  meta.py  middleware.py  path_resolver.py  router.py
src/autorest/session/: providers.py  session.py
src/autorest/templates/: api_list.html
src/autorest/util/: b64.py  collector.py  func_util.py  sha1.py  utils.py
src/restfx/: __init__.py  __meta__.py  app.py  app_context.py  config.py  context.py  globals.py  wsgi_app.py
src/restfx/api_assets/scripts/: index.js
src/restfx/api_assets/styles/: index.css
src/restfx/api_assets_for_dev/scripts/: index.js
src/restfx/api_assets_for_dev/styles/: index.css
src/restfx/assets_for_dev/sample/: main.py  settings.py
src/restfx/assets_for_dev/sample/bar/: foobar.py
src/restfx/assets_for_dev/sample/static/: index.html
src/restfx/assets_for_dev/scripts/: index.js  options.js  renderers.js  test.js  xhr.js
src/restfx/assets_for_dev/styles/: index.css
src/restfx/assets_for_dev/templates/: api_list.html
src/restfx/commands/: __init__.py  commands.py
src/restfx/http/: __init__.py  request.py  response.py
src/restfx/internal_assets/: .gitignore
src/restfx/internal_assets/sample/: README.md  main.py  middlewares.py  plugin.py  settings.py
src/restfx/internal_assets/sample/bar/: foobar.py
src/restfx/internal_assets/scripts/: base64.js  enums.js  export.js  index.js  jsonviewer.js  navigation.js  options.js  panel.js  renderers.js  search.js  test.js  xhr.js  zepto.min.js
src/restfx/internal_assets/styles/: apis.less  common.less  enums.less  index.css  jsonviewer.css  jsonviewer.less  layout.less  navigation.less  options.less  panel.less  search.css  search.less  tabs.less  test.less  x-ie.less
src/restfx/internal_assets/templates/: api_list.html  api_page.html  apipage.html
src/restfx/middleware/: __init__.py  access.py  interface.py  manager.py  methods.py
src/restfx/middleware/contribs/: __init__.py  auth.py
src/restfx/middleware/middlewares/: __init__.py  auth.py  check_referer.py  options.py  session.py  timetick.py
src/restfx/plugin/: __init__.py  interface.py
src/restfx/plugins/: __init__.py
src/restfx/routes/: __init__.py  api_page.py  collector.py  decorator.py  meta.py  parameter_interface.py  parameter_types.py  path_resolver.py  route_resolver.py  router.py  validator.py
src/restfx/session/: __init__.py  interfaces.py  providers.py  session.py
src/restfx/templates/: api_list.html
src/restfx/util/: __init__.py  event.py  func_util.py  helper.py  logger.py  md5.py  store.py  utils.py
test/: .gitignore  app.py  command.py  enums.py  main.py  midlewares.py  routes_map.py  session_provider.py
test/static/: index.html
test/static/assets/: myscript.js
test/test/: a.py
test/test/a/: __init__.py  a.py
test/test/api/: __init__.py  demo.py
test/test/tools/: validators.py
