[metadata]
name=restfx
# Version needs regex in setup.py.
url = https://gitee.com/wangankeji/restfx
project_urls =
    Documentation = https://gitee.com/wangankeji/restfx/wikis
    Repository = https://gitee.com/wangankeji/restfx
    Issue tracker = https://gitee.com/wangankeji/restfx/issues
license_files =
    LICENSE
    LICENSE.WERKZEUG.rst
author = hyjiacan
author_email = hyjiacan@163.com
maintainer = hyjiacan
maintainer_email = hyjiacan@163.com
description = A RESTful framework for Python3.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
        #   3 - Alpha
        #   4 - Beta
        #   5 - Production/Stable
        Development Status :: 4 - Beta
        Environment :: Web Environment
        Intended Audience :: Developers
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent
        Programming Language :: Python :: 3
        Topic :: Internet :: WWW/HTTP :: Dynamic Content
        Topic :: Internet :: WWW/HTTP :: WSGI
        Topic :: Internet :: WWW/HTTP :: WSGI :: Application
        Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires= >=3.6
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    restfx = restfx.commands:execute